Rename add_new_order.dart and clean up asset references in pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,8 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
-  assets:
-    - lib/data/fake_data/fake_data.json
-    - lib/data/fake_data/fake_drinks.json
+#  assets:
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
